cabal-version:      2.4
name:               P10
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable P10
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        pqueue ^>=1.4.1.4

    hs-source-dirs:   app
    default-language: Haskell2010
