cabal-version:      2.4
name:               P23
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable P23
    main-is:          Main.hs
    ghc-options:
      -threaded
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable P23-profiling
    main-is:          Main.hs
    ghc-options:
      -threaded
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-N -p -s -i0.01"
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable list-profiling
    main-is:          list.hs
    ghc-options:
      -threaded
      -fprof-auto
      "-with-rtsopts=-N -p -s -i0.01"
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable bitvec
    main-is:          bitvec.hs
    ghc-options:
      -threaded
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1,
        bitvec ^>=1.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable bitvec-profiling
    main-is:          bitvec.hs
    ghc-options:
      -threaded
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-N -p -s -i0.01"
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1,
        bitvec ^>=1.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable search
    main-is:          search.hs
    ghc-options:
      -threaded
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1,
        bitvec ^>=1.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable search-profiling
    main-is:          search.hs
    ghc-options:
      -threaded
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-N -p -s -i0.01"
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1,
        bitvec ^>=1.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

