cabal-version:      2.4
name:               P29
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable P29
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        primes ^>=0.2.1.0,
        containers ^>=0.6.5.1,
        vector ^>=0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
