cabal-version:      2.4
name:               P39
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    default-language: Haskell2010
    ghc-options:
      -threaded
      -Wall
      -Widentities
      -Wredundant-constraints
      -Wunused-packages
    build-depends:
        base ^>=4.14.3.0,
        vector ^>=0.12.3.1,
        extra ^>=1.7.10

executable P39
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app


executable P39-profiling
    import: shared-properties
    main-is:          Main.hs
    ghc-options:
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-N -p -s -h -i0.01"


    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
