cabal-version:      2.4
name:               P68
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        vector ^>=0.12.3.1,
        containers ^>=0.6.5.1
    ghc-options:
    -- For details on warnings: https://downloads.haskell.org/~ghc/master/users-guide/using-warnings.html
    -- This list taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -- Enable all warnings with -Weverything, then disable the ones we don’t care about
    -- Added -Wno-implicit-prelude, -Wno-missing-safe-haskell-mode
      -Weverything

    -- missing-exported-signatures turns off the more strict -Wmissing-signatures.
    -- See https://ghc.haskell.org/trac/ghc/ticket/14794#ticket
      -Wno-missing-exported-signatures

    -- Requires explicit imports of _every_ function (e.g. ‘$’); too strict
      -Wno-missing-import-lists

    -- When GHC can’t specialize a polymorphic function.
    -- No big deal and requires fixing underlying libraries to solve.
      -Wno-missed-specialisations

    -- See missed-specialisations
      -Wno-all-missed-specialisations

    -- Don’t use Safe Haskell warnings
      -Wno-unsafe

    -- Don’t use Safe Haskell warnings
      -Wno-safe

    -- Warning for polymorphic local bindings; nothing wrong with those.
      -Wno-missing-local-signatures

    -- Don’t warn if the monomorphism restriction is used
    -- -Wno-monomorphism-restriction

    -- Use implicit prelude, so don't warn.
      -Wno-implicit-prelude

    -- Don’t use Safe Haskell warnings
      -Wno-missing-safe-haskell-mode

      -threaded

    default-extensions:
      TypeApplications
      ImportQualifiedPost


executable P68
    import: shared-properties
    main-is: Main.hs
    hs-source-dirs: app

executable P68-profiling
    import: shared-properties
    main-is: Main.hs
    hs-source-dirs: app
    ghc-options:
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-p -s -i0.01"

executable P68-CPS
    import: shared-properties
    main-is: Main-CPS.hs
    hs-source-dirs: app

executable P68-CPS-profiling
    import: shared-properties
    main-is: Main-CPS.hs
    hs-source-dirs: app
    ghc-options:
      -fprof-auto
      -rtsopts
      "-with-rtsopts=-p -s -i0.01"
