cabal-version:      2.4
name:               digitset
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Thomas Li
maintainer:         thomas5267@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    build-depends:
        base,
        vector ^>=  0.12.3.1 || ^>= 0.13.0.0,
        bitvec ^>= 1.1.2.0,
        helper ^>= 0.1.0.0
    hs-source-dirs: src
    ghc-options:
    -- For details on warnings: https://downloads.haskell.org/~ghc/master/users-guide/using-warnings.html
    -- This list taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -- Enable all warnings with -Weverything, then disable the ones we don’t care about
    -- Added -Wno-implicit-prelude, -Wno-missing-safe-haskell-mode, -Wno-missing-export-lists,
    -- -Wno-prepositive-qualified-module

      -Weverything

    -- missing-exported-signatures turns off the more strict -Wmissing-signatures.
    -- See https://ghc.haskell.org/trac/ghc/ticket/14794#ticket
      -Wno-missing-exported-signatures

    -- Requires explicit imports of _every_ function (e.g. ‘$’); too strict
      -Wno-missing-import-lists

    -- When GHC can’t specialize a polymorphic function.
    -- No big deal and requires fixing underlying libraries to solve.
      -Wno-missed-specialisations

    -- See missed-specialisations
      -Wno-all-missed-specialisations

    -- Don’t use Safe Haskell warnings
      -Wno-unsafe

    -- Don’t use Safe Haskell warnings
      -Wno-safe

    -- Warning for polymorphic local bindings; nothing wrong with those.
      -Wno-missing-local-signatures

    -- Don’t warn if the monomorphism restriction is used
    -- -Wno-monomorphism-restriction

    -- Use implicit prelude, so don't warn.
      -Wno-implicit-prelude

    -- Don’t use Safe Haskell warnings
      -Wno-missing-safe-haskell-mode

    -- Mostly one off program, so don't warn on lack of explicit export
      -Wno-missing-export-lists

    -- This is just stupid
      -Wno-prepositive-qualified-module

    exposed-modules:  Euler.DigitSet
